fixed dark mode issue maybe

--- a/client/src/app/ui/globals.css
+++ b/client/src/app/ui/globals.css
@@ -1,8 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -14,19 +13,19 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 154, 224, 178;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 154, 224, 178;
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-      to bottom,
-      rgb(var(--background-start-rgb)),
-      rgb(var(--background-start-rgb)) 40%, /* Adjust this percentage as needed */
-      rgb(var(--background-end-rgb)) 100%
-    )
+    to bottom,
+    rgb(var(--background-start-rgb)),
+    rgb(var(--background-start-rgb)) 40%,
+    /* Adjust this percentage as needed */ rgb(var(--background-end-rgb)) 100%
+  );
 }
 
 @layer utilities {
@@ -53,9 +52,9 @@ body {
 
 @keyframes spin {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
